fixed bug with shedule a demo button size and added webkit to fix blue screen on tap on mobile phone

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
 /* font-family: 'Public Sans', sans-serif; */
 
 * {
+  -webkit-tap-highlight-color: transparent;
+}
+
+* {
   box-sizing: border-box;
 }
 
@@ -163,9 +167,11 @@ body {
   color: var(--LinkWaterWhite);
   text-align: center;
   font-weight: 700;
-  letter-spacing: 0.7px;
+  letter-spacing: -0.115px;
   padding-top: 3px;
   padding-left: 10px;
+  font-size: 15px;
+  font-family: 'Public Sans', sans-serif;
 }
 
 /* >>>>>>>>>>>>>>>>> Header <<<<<<<<<<<<<<<<<< */
@@ -228,9 +234,11 @@ header h1 {
   color: var(--LinkWaterWhite);
   text-align: center;
   font-weight: 700;
-  letter-spacing: 0.7px;
-  padding-top: 4px;
-  padding-left: 11px;
+  letter-spacing: -0.115px;
+  padding-top: 2px;
+  padding-left: 8px;
+  font-size: 15px;
+  font-family: 'Public Sans', sans-serif;
 }
 
 header p {
